# Ising

./: .gitignore  IsingMl.ipynb  RBM.ipynb  README.md  VAE.ipynb  VAE_test.ipynb  input.py
GetData/: Ising.ipynb  Ising_genData.ipynb  README.md  copy.sh  get_data.py  macro.py  send.sh  to_tfrecord.py
GetData/Demo/Crit/: parameters.csv
GetData/Demo/Crit/output1/: data.csv  final.npy
GetData/Demo/Crit/output2/: data.csv  final.npy
GetData/Demo/Crit/output3/: data.csv  final.npy
GetData/Demo/High/: parameters.csv
GetData/Demo/Low/: parameters.csv
GetData/Demo/MagNegative/: parameters.csv
GetData/Demo/Neg/: parameters.csv
GetData/Demo/Pos/: parameters.csv
GetData/Demo/WolffCrit/: parameters.csv
GetData/Demo/WolffFirst/: parameters.csv
GetData/Demo/WolffHigh/: parameters.csv
GetData/Demo/WolffLow/: parameters.csv
GetData/Python/: get_data.py  make_dataset.sh  simulate.py  to_tfrecord.py
GetData/Rust/: Cargo.toml
GetData/Rust/get_data_rust/: Cargo.toml
GetData/Rust/get_data_rust/src/: main.rs  results.rs  simulation.rs
GetData/Rust/src/: main.rs
Model/: RBM.ipynb  VAE.ipynb  final.ipynb  input_pipeline.py  results.py
Model/CVAE/: CVAE.ipynb  CVAE.py  CVAE_colab.ipynb  CVAE_sample.ipynb  model.py  train_classifier.py
Model/GAN/: GAN.ipynb  GAN_colab.ipynb  GAN_sample.ipynb  Ising_GAN.ipynb  energy_temp.csv  model.py  regression.ipynb  regression_stats.ipynb  train.py
Model/GANS/: Ising_GAN.ipynb
Model/VAE/: VAE.ipynb  VAE_colab.ipynb  VAE_sample.ipynb  model.py  tsne.ipynb
Plots/: convert.ipynb  style.py
(+154 files in other folders)
