[package]
name = "get_data_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ndarray = "0.15"
csv = "1.1"
ndarray-rand = "0.14"
rand = "0.8"
rand_distr = "0.4.3"
ndarray-npy = "0.8.0"
rayon = "1.7.0"
